<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/material_dynamic_primary50">

    <Button
        android:id="@+id/Sign_out_BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/sign_out"
        android:layout_margin="10dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_us_and_find_your_best_vehicle_match"
        android:textStyle="bold"
        android:textColor="@color/material_dynamic_neutral100"
        android:textSize="28sp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="75dp"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/list_count_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vehicles_on_storage"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:maxLines="1"
        android:layout_marginHorizontal="70dp"
        android:layout_marginVertical="155dp"
        />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/music_Switch"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="5dp"
        android:text="@string/music"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <ImageView
        android:id="@+id/sloganIMG"
        android:layout_width="400dp"
        android:layout_height="250dp"
        android:scaleX="1.8"
        android:scaleY="1.5"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="200dp"
        android:importantForAccessibility="no"
        android:src="@mipmap/slogan_img_foreground" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
 >

    <Button
        android:id="@+id/Sign_in_BTN"
        android:layout_width="185dp"
        android:layout_height="70dp"
        android:layout_marginVertical="468dp"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:layout_marginHorizontal="110dp"
        />


</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp">

            <Button
                android:id="@+id/Yad2_BTN"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="135dp"
                android:layout_marginVertical="550dp"
                android:backgroundTint="@color/common_google_signin_btn_text_light"
                android:text="@string/yad_2_board"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginVertical="600dp"
        android:layout_marginHorizontal="30dp"
        android:src="@mipmap/logo_img_foreground" />

    </RelativeLayout>
</RelativeLayout>