<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/material_dynamic_primary50">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="250dp"
>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        android:textSize="25sp"
        android:textAlignment="center"
        android:background="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="350dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="12"
            android:inputType="text"
            android:hint="@string/user_name"
            android:textColorHint="@color/black"
            android:textSize="25sp"
            android:textAlignment="center"
            android:background="@color/white"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="450dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="12"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:textSize="25sp"
            android:textAlignment="center"
            android:background="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_marginVertical="550dp"
        android:layout_marginHorizontal="75dp"
        >
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/create_account_foreground"
            />


    </LinearLayout>


</RelativeLayout>

